[project]
name = "rs3005p-mcp"
version = "0.1.0"
description = "MCP server for controlling RS PRO RS-3005P / RS-6005P programmable DC power supplies over serial (KORAD RS-series V2.0 protocol)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
rs3005p-mcp = "rs3005p_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rs3005p_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rs3005p_mcp --cov-report=term-missing"
